--- a/sections/1-introducao.tex
+++ b/sections/1-introducao.tex
@@ -3,7 +3,7 @@
 %Falar sobre a popularização dos dispositivos móveis e da Internet.%
 %Falar sobre as mudanças introduzidas pelos dispositivos móveis nas formas de comunicação em sociedade.%
 %--------------------------%
-Os dispositivos móveis apresentam a cada dia novas oportunidades e desafios para as tecnologias da informação, tais como o acesso ubíquo, a portabilidade, a democratização do acesso à informação além de novas oportunidades de negócio \cite{levy_2002}. Com a expansão da Internet e o grande volume de dados compartilhados nas redes sociais e aplicativos de troca de mensagens, surgiram novos paradigmas (e.g. \textit{Big Data}, \textit{Cloud Computing}, \textit{NoSQL}, etc.), novas tecnologias como o \textit{Push Notification} e também novas oportunidades de trabalho e profissões (e.g. O analista de dados, o desenvolvedor mobile, o \textit{design UX} e etc.), além de pesquisas importantes na ciência da computação que abrange tanto hardware como software.\par
+Os dispositivos móveis apresentam a cada dia novas oportunidades e desafios para as tecnologias da informação, tais como o acesso ubíquo, a portabilidade, a democratização do acesso à informação além de novas oportunidades de negócio \cite{levy_2002}. Com a expansão da Internet e o grande volume de dados compartilhados nas redes sociais e aplicativos de troca de mensagens, surgiram novos paradigmas (e.g. \textit{Big Data}, \textit{Cloud Computing}, \textit{NoSQL}, etc.), novas tecnologias como o \textit{Push Notification} e também novas oportunidades de trabalho e profissões (e.g. O analista de dados, o desenvolvedor mobile, o \textit{design UX}, etc.), além de pesquisas importantes na ciência da computação que abrange tanto hardware como software.\par
 
 Os smartphones inovam a cada dia diversas áreas do conhecimento, tais como a engenharia elétrica, no projeto de baterias cada vez mais eficientes, o design, no projeto de interfaces cada vez mais intuitivas e influenciam diretamente na evolução da Internet e dos meios de comunicação como as redes móveis que expandem as áreas de cobertura para atender ao crescente número de aparelhos conectados. Os dispositivos móveis também permitem bons empreendimentos através dos aplicativos. Atualmente, o número de downloads cresce a cada dia na \textit{App Store} e \textit{Google Play}, demonstrando uma certa disponibilidade dos usuários de passarem cada vez mais tempo utilizando os aplicativos do que os próprios navegadores de Internet \cite{D&T}. Através dos aplicativos, é possível monetizar e gerar receitas via marketing digital e desenvolver soluções para diversos segmentos, tais como o \textit{e-commerce}, redes sociais e sistemas de informação.\par
 
@@ -35,4 +35,4 @@ Para desenvolver este trabalho, foi utilizado o Qt, ele dispõe de APIs que faci
 %--------------------------%
 %* Retórica *%
 %--------------------------%
-Este trabalho está organizado como segue. A sessão 2 apresenta o referencial bibliográfico. Em seguida, na sessão 3, será apresentado os trabalhos relacionados. A sessão 4 detalha o projeto da arquitetura. A sessão 5 apresenta a avaliação realizada e a sessão 6 descreve as conclusões obtidas seguido das limitações encontradas e os possíveis trabalhos futuros.
+Este trabalho está organizado como segue. A seção 2 apresenta o referencial bibliográfico. Em seguida, na seção 3, será apresentado os trabalhos relacionados. A seção 4 detalha o projeto da arquitetura. A seção 5 apresenta a avaliação realizada e a seção 6 descreve as conclusões obtidas seguido das limitações encontradas e os possíveis trabalhos futuros.
