--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -2,7 +2,7 @@
 %<apresentar uma pequena descrição dos assuntos apresentados nas sub-seções seguintes>%
 %<Um último parágrafo ligando estes quatro temas, sem ainda dizer o que você vai fazer>%
 \section{REFERENCIAL BIBLIOGRÁFICO}
-Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o qml. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 apresenta Arquitetura de Referência. A subseção 2.4 resume Sistemas de Informação. A subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A subseção 2.6 detalha Projetos de Aplicativos Móveis. A subseção 2.7 discute sobre Desenvolvimento de Software Orientado a Componentes. Para finalizar, a subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTFul}, o \textit{Push Notification} e o JSON.
+Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o qml. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 apresenta Arquitetura de Referência. A subseção 2.4 resume Sistemas de Informação. A subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A subseção 2.6 detalha Projetos de Aplicativos Móveis. A subseção 2.7 discute sobre Desenvolvimento Orientado a Componentes. Para finalizar, a subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTFul}, o \textit{Push Notification} e o JSON.
 
 
 \subsection{O Qt e o qml}
@@ -39,7 +39,7 @@ Neste trabalho, arquitetura de software pode ser compreendida nas decisões de i
 \subsection{Arquitetura de Referência}
 Uma arquitetura de referência consiste em uma forma de apresentar um padrão genérico para um projeto \cite{zambiasi}. Com base nessa arquitetura, o desenvolvedor projeta, desenvolve e configura uma aplicação prototipando-a por meio de componentes reutilizáveis \cite{zambiasi}. Para compor uma arquitetura de referência é necessário apresentar os tipos dos elementos envolvidos, como eles interagem e o mapeamento das funcionalidades para estes elementos \cite{Hofmeister:1999:ASA:322640}. De maneira geral, uma arquitetura de referência deve abordar os requisitos para o desenvolvimento de soluções, guiado pelo modelo de referência e por um estilo arquitetural de forma a atender as necessidades do projeto \cite{c._k_f._2006}.\par
 
-A concepção de uma arquitetura de referência pode ser entendida neste trabalho como uma forma de disponibilizar um padrão genérico para o desenvolvimento de novos aplicativos no contexto de sistemas de informação, partindo de quatro requisitos funcionais que serão apresentados em uma sessão mais adiante.\par
+A concepção de uma arquitetura de referência pode ser entendida neste trabalho como uma forma de disponibilizar um padrão genérico para o desenvolvimento de novos aplicativos no contexto de sistemas de informação, partindo de quatro requisitos funcionais que serão apresentados em uma seção mais adiante.\par
 
 
 \subsection{Sistemas de Informação}
@@ -77,8 +77,8 @@ O sucesso de aplicativos para dispositivos móveis vai além das medidas de dese
 Torna-se evidente que são muitos requisitos a serem considerados em um projeto de um aplicativo móvel. O esforço dedicado para atender a todos os requisitos pode tornar o projeto enfadonho, além de exigir tempo e mão de obra. O processo de desenvolvimento pode ser otimizado através de ferramentas como \textit{frameworks} ou uma arquitetura de software que disponha de componentes reutilizáveis e fácil extensibilidade através de plugins.
 
 
-\subsection{Desenvolvimento de Software Orientado a Componentes}
-O desenvolvimento de software Orientado a componentes é um paradigma da engenharia de software caracterizado pela composição de partes já existentes, ou desenvolvidas independentemente e que são integradas para atingir um objetivo final \cite{rafael_heider}. Construir novas soluções pela combinação de componentes desenvolvidos aumenta a qualidade e dá suporte ao rápido desenvolvimento, levando à diminuição do tempo de entrega do produto final ao mercado \cite{rafael_heider}. Os sistemas definidos através da composição de componentes permitem que sejam adicionadas, removidas e substituídas partes do sistema sem a necessidade de sua completa substituição. Com isso, o desenvolvimento baseado em componentes auxilia na manutenção do software, por permitir que o sistema seja atualizado através da integração de novos componentes ou atualização dos objetos já existentes \cite{szyperski_bosch_weck_1999}.\par
+\subsection{Desenvolvimento Orientado a Componentes}
+O desenvolvimento de software orientado a componentes é um paradigma da engenharia de software caracterizado pela composição de partes já existentes, ou desenvolvidas independentemente e que são integradas para atingir um objetivo final \cite{rafael_heider}. Construir novas soluções pela combinação de componentes desenvolvidos aumenta a qualidade e dá suporte ao rápido desenvolvimento, levando à diminuição do tempo de entrega do produto final ao mercado \cite{rafael_heider}. Os sistemas definidos através da composição de componentes permitem que sejam adicionadas, removidas e substituídas partes do sistema sem a necessidade de sua completa substituição. Com isso, o desenvolvimento baseado em componentes auxilia na manutenção do software, por permitir que o sistema seja atualizado através da integração de novos componentes ou atualização dos objetos já existentes \cite{szyperski_bosch_weck_1999}.\par
 
 O reuso de componentes é um recurso desta arquitetura, pois dispõe de dezesseis componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos qml que podem atender a diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reúso, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
 
