--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -16,7 +16,7 @@ Nesta seção, serão apresentados os trabalhos relacionados com este projeto. P
 A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes.\par
 As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma.\par
 
-O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínios diferentes, os trabalhos se relacionam no atendimento de três requisitos funcionais: o cache de dados (persistência local); notificações do aplicativo (local e \textit{push notification}) e acesso a rede. A tabela à seguir, apresenta as principais características deste trabalho com o trabalho de Melotti.
+O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínios diferentes, os trabalhos se relacionam no atendimento de três requisitos funcionais: o cache de dados (persistência local); notificações do aplicativo (local e \textit{push notification}) e acesso a rede. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Melotti.
 
 \begin{table}[H]
 % O \small reduz o font-size da tabela
@@ -41,7 +41,7 @@ Recurso & Este trabalho & CReAMA \\ \hline
 \textit{MoCA} (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece recursos para o desenvolvimento de aplicações distribuídas sensíveis ao contexto que envolvem usuários móveis. Esses recursos incluem um serviço para a coleta, armazenamento e distribuição de informações de contexto e um serviço de inferência de localização de dispositivos móveis. Além disso, a arquitetura provê APIs para o desenvolvimento de aplicações que interagem com estes serviços como consumidores de informações de contexto. Os serviços providos pela \textit{MoCA} livram o programador da obrigação de implementar serviços específicos para a coleta e tratamento de contexto.\par
 O conjunto de APIs oferecidas pela \textit{MoCA} para desenvolvimento de aplicações compreende três grupos: as APIs de comunicação, que fornecem interfaces de comunicação síncrona e assíncrona (componentes de \textit{UI} que utilizam eventos); as APIs principais que fornecem interfaces de comunicação com os serviços básicos da arquitetura; e as APIs opcionais que facilitam o desenvolvimento de aplicações baseadas na arquitetura cliente-servidor.\par
 
-A relação deste trabalho com a arquitetura proposta em \textit{MoCA} pode ser entendida pelo uso do estilo arquitetural \textit{Event Based}, além provê APIs de alto nível para operações de rede, persistência de dados no dispositivo e notificações do aplicativo. No entando, \textit{MoCa} foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente-servidor através de serviços \textit{RESTFul}. A tabela à seguir, apresenta as principais características deste trabalho com a arquitetura \textit{MoCA}.
+A relação deste trabalho com a arquitetura proposta em \textit{MoCA} pode ser entendida pelo uso do estilo arquitetural \textit{Event Based}, além provê APIs de alto nível para operações de rede, persistência de dados no dispositivo e notificações do aplicativo. No entando, \textit{MoCa} foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente-servidor através de serviços \textit{RESTFul}. A tabela a seguir, apresenta as principais características deste trabalho com a arquitetura \textit{MoCA}.
 
 \begin{table}[H]
 \small
@@ -65,7 +65,7 @@ Recurso & Este trabalho & MoCA \\ \hline
 O trabalho teve como objetivo principal, realizar análise e estudo sobre as tecnologias de desenvolvimento de aplicativos móveis multiplataforma, utilizando a junção dos frameworks \textit{PhoneGap} e \textit{Sencha Touch}. Os aplicativos desenvolvidos usando o \textit{PhoneGap} são aplicações híbridas onde partes do aplicativo, principalmente a interface do usuário, a lógica da aplicação e a comunicação com um servidor, é baseado em HTML, Javascript e CSS. A outra parte, que se comunica com o sistema operacional do dispositivo é baseada no idioma nativo de cada plataforma, ou seja, \textit{Java} no android e \textit{Objective C} no iOS.\par
 O estudo propôs uma modelagem facilitada de integração com outro sistema por meio de serviços web, através de uma aplicação \textit{RESTFul} utilizando Java EE. Com a análise das ferramentas e tecnologias levantadas, pode-se concluir que o desenvolvimento de aplicativos utilizando os frameworks \textit{PhoneGap} e \textit{Sencha Touch} tem muitas vantagens. Uma delas é a facilidade de portar o aplicativo para qualquer plataforma móvel. O  \textit{PhoneGap} dispõe uma arquitetura \textit{MVC} e diversos componentes para acesso a recursos do dispositivo, como câmera, acelerômetro e GPS através de objetos javascript. O \textit{Sencha Touch} dispõe de objetos focado em UI, principalmente suporte a eventos de toque na tela.\par
 
-O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em Javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho até notificações do sistema. No entanto, o \textit{PhoneGap} não possui componentes de interface prontos para serem adicionadas na aplicação, por isso no trabalho de Jauri foi utilizado outro framework para composição das telas. A tabela à seguir, apresenta as principais características deste trabalho com o trabalho de Jauri.
+O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em Javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho até notificações do sistema. No entanto, o \textit{PhoneGap} não possui componentes de interface prontos para serem adicionadas na aplicação, por isso no trabalho de Jauri foi utilizado outro framework para composição das telas. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Jauri.
 
 \begin{table}[H]
 \small
